# EventBox

./: .gitignore  CLAUDE.md  README.md  package.json
.agents/skills/testing-eventbox/: SKILL.md
.agents/skills/testing-eventbox-server/: SKILL.md
.github/workflows/: auto-release-on-sync.yml  build.yml  sync-chasseflow.yml  sync-danceflow.yml
src/: dashboard.html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: server.ts
src-tauri/src/: lib.rs  main.rs
