[package]
name = "eventbox-desktop"
version = "0.3.4"
description = "EventBox — LAN Authority Server for dance competitions"
authors = ["DanceFlowControl"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "process-all", "shell-open", "system-tray", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
