[package]
name = "eventbox-desktop"
version = "0.3.42"
description = "EventBox — LAN Authority Server for dance competitions"
authors = ["DanceFlowControl"]
license = "MIT"
edition = "2021"

[lib]
name = "eventbox_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eventbox-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6"

# Fix #7: libc needed for SIGTERM on orphaned server processes (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
